Bug 474406 - Assigning tokens in viewer does not accept lowercase - or does it?
Summary: Assigning tokens in viewer does not accept lowercase - or does it?
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Viewer (other bugs)
Version First Reported In: GIT master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-11 14:32 UTC by Andreas Schleth
Modified: 2023-09-12 09:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the category view from the viewer (88.98 KB, image/png)
2023-09-11 14:32 UTC, Andreas Schleth
Details
Token list does not list the "H" (6.50 KB, image/png)
2023-09-11 14:32 UTC, Andreas Schleth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schleth 2023-09-11 14:32:16 UTC
Created attachment 161557 [details]
the category view from the viewer

SUMMARY
***
To successfully assign a token in the viewer, you need to use capital letters (caps lock). Otherwise, the token gets assigned as lower case letter, which does not show in the tokens list (but in the category list in viewer and thumbnail view). It is even possible to assign a lowercase and an uppercase token for the same letter "h" and "H". Then the token does not show in the tokens list.
***


STEPS TO REPRODUCE
1. Start viewer and hit crt-t to allow assigning tokens
2. hit any letter, eg. "h"
3. The hint "Token H" appears and disappears and the letter "h" is listed in the category as token
4. exit the viewer and go to the start page
5. select Tokens

OBSERVED RESULT
* The newly assigned token is not in the list.
* But in thumbnail view and viewer, the letter "h" is listed as token
* When assigning "h" and "H" as tokens, both are listed in the categories in thumbnail view and viewer but "H" is not shown in the list of tokens.

EXPECTED RESULT
* The token should have been assigned as uppercase "H" regardless of caps lock setting and should always appear in the token list (the one reachable from the start page). That would be the old behaviour - see https://bugs.kde.org/show_bug.cgi?id=474307 and would be consistent with assigning tokens in the thumbnail view.

SOFTWARE/OS VERSIONS
KPA: v5.11.0-92-g28815029
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8 

ADDITIONAL INFORMATION
Comment 1 Andreas Schleth 2023-09-11 14:32:52 UTC
Created attachment 161558 [details]
Token list does not list the "H"
Comment 2 Andreas Schleth 2023-09-11 14:45:27 UTC
Additional effect/inconsistency: It is not possible to get rid of lowercase tokens in the thumbnail view or in the annotation dialogue.
Comment 3 Johannes Zarl-Zierl 2023-09-11 21:38:31 UTC
Git commit d84d2d535fd32f9f95918b8716b20e6db8474757 by Johannes Zarl-Zierl.
Committed on 11/09/2023 at 23:35.
Pushed by johanneszarl into branch 'master'.

Ensure that tokens are upper case.

This was a regression introduced by commit
3a130ed45089c1b043bea8834a23be0438b4ee17.

M  +11   -7    Viewer/ViewerWidget.cpp
M  +1    -1    Viewer/ViewerWidget.h

https://invent.kde.org/graphics/kphotoalbum/-/commit/d84d2d535fd32f9f95918b8716b20e6db8474757
Comment 4 Johannes Zarl-Zierl 2023-09-11 21:39:52 UTC
Hi Andreas,

Thanks for the report! I believe the regression is fixed by commit d84d2d53.

Cheers,
  Johannes
Comment 5 Andreas Schleth 2023-09-11 22:52:45 UTC
As far as I can see, I can confirm that the issue is fixed with 5.11.0-100-gd84d2d53  :-)

Eliminating the remaining lower case tokens took a bit of vim-ing but was OK.
Comment 6 Johannes Zarl-Zierl 2023-09-12 09:19:55 UTC
Am Dienstag, 12. September 2023, 00:52:45 CEST schrieben Sie:
> As far as I can see, I can confirm that the issue is fixed with
> 5.11.0-100-gd84d2d53  :-)

Thanks for checking!

> Eliminating the remaining lower case tokens took a bit of vim-ing but was
> OK.

Sorry!

Cheers,
  Johannes