Ensure that tokens are upper case.

This was a regression introduced by commit
3a130ed45089c1b043bea8834a23be0438b4ee17.

BUG: 474406